add rate limiting

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,5 @@
-OPENAI_API_KEY=xxxxxxxxx
+OPENAI_API_KEY=xxxxx
+CHAT_MAX_REQUESTS=1
+NUTRITION_MAX_REQUESTS=1
+GLOBAL_MAX_REQUESTS=1
+MAX_MESSAGE_LENGTH=1
